--- a/home.css
+++ b/home.css
@@ -4,54 +4,76 @@
     text-decoration: none;
     list-style: none;
     box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
+    
 }
 body{
-    background-color:#016A70
-     ;
+    background: whitesmoke;
+
 }
-.header{
+nav{
+    width: 100%;
+    height: 75px;
+    line-height: 75px;
+    padding: 0px 100px;
     position: fixed;
-    padding: 10px;
-    background-color: #D2DE32;
-    width:auto;
-    height: fit-content;
-    font-family: Georgia, serif;
-   
+    background-color:#D2DE32;
+}
+nav .logo p{
+  font-size: 30px;
+  font-weight: bold;
+  float: left;
+  color: black;
+  text-transform: uppercase;
+  letter-spacing: 1.5px;
+  cursor: pointer;
 }
 
-.wrapper{
-   display: flex; 
-   position:fixed;
-}
-.wrapper .sidebar{
-position: fixed;
-width: 200px;
-height: 100%;
-background-color: #D2DE32;
-color:black;
-padding: 30px 0;
-}
-.wrapper .sidebar ul li{
-   padding: 20px; 
-   border-bottom: 1px solid rgb(0,0,0,0.05);
-   border-top: 1px solid rgb(225,225,225,0.05);
+ nav ul{
+    float: right; 
 
 }
-.wrapper .sidebar ul li:hover{
-    background-color: beige;
+nav li{
+
+    display: inline-block;
+    list-style: none;
 }
-.active{
-    background-color: beige;
+nav li a{
+    font-size: 18px;
+    text-transform: uppercase;
+    padding: 0 30px;
+    color:black;
+    text-decoration: none;
 }
-.pic{
-    display: flex;
-    flex-direction: row-reverse;
+nav li a:hover{
+    color:teal;
+    transition: 0.4s ease 0s;
 }
-.h1{
-    text-align: right;
+.text-box{
+    color: black;
 }
+
+
 .img-gallery{
-    margin-left: 550px;
+    margin-top: 100px;
+    background: beige;
+   display: flex;
+   justify-content: center;
 }
-
+.img-gallery img:hover{
+    transform: scale(0.8);
+}
+.item{
+    margin: 10px;
+    
+}
+.facilities{
+    margin-top: 100px;
+    background: beige;
+   display: flex;
+   justify-content: center;
+}
+.fac{
+    margin: 10px;
+    border-radius: 30px;
+    padding-left: 100px;
+}
